added scss folder

--- a/src/Stylesheets/scss/Header.scss
+++ b/src/Stylesheets/scss/Header.scss
@@ -1,5 +1,5 @@
 //Sass color variables
-$link-color: #4478A6;
+$link-color: #2b5400;
 $hover-color: darken($link-color, 20%);
 $visited-color: lighten($link-color, 20%);
 
