--- a/src/Stylesheets/Header.scss
+++ b/src/Stylesheets/Header.scss
@@ -1,22 +1,32 @@
-//Sass color variables
-$link-color: #2b5400;
-$hover-color: darken($link-color, 20%);
-$visited-color: lighten($link-color, 20%);
+@import "Variables.scss";
+@import "@fontsource/bodoni-moda-sc";
 
-//link styling
-a{
-    color: $link-color;
-    text-decoration: none;
-    background: transparent;
-    transition: background 1s ease, padding 1s ease;
+// Header for all pages
+.header {
+  font-family: "Bodoni Moda SC";
+  color: $background-color;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  box-shadow:0px 5px 41px 15px rgba(0, 0, 0, 0.65);
 
-    &:hover{
-      color: $hover-color;
-      background: lighten($hover-color, 65%);
-      padding: 4px 0;
-    }
-
-    &:visited{
-      color: $visited-color;
-    }
+  .title {
+    font-size: 64px;
+    letter-spacing: 11%;
+    color: $text-color;
+  };
+  a {
+    color: $text-color;
+    padding: 40px;
+    font-size: 20px;
   }
+}
+
+.logo {
+  height: 200px;
+  width: 200px;
+  padding-left: 35px;
+  padding-top: 10px;
+}
