--- a/src/Stylesheets/Header.scss
+++ b/src/Stylesheets/Header.scss
@@ -24,18 +24,20 @@
     padding-left: 35px;
     padding-top: 10px;
     transition: box-shadow 0;
-  }
-
-  a {
+  };
+  .menuButton {
     color: $text-color;
     margin: 10px;
     padding: 20px;
     font-size: 20px;
-    transition: box-shadow 2s;
-    border-radius: 20%;
+    transition: box-shadow .5s;
+    border-radius: 5%;
+    text-decoration: none;
+  };
+  .menuButton:hover {
+    box-shadow: 0px 10px 18px 3px $shadow-color;
+  };
+  .divider {
+    width: 20%;
   }
-  
-  a:hover {
-    box-shadow: 0px 10px 18px 3px $shadow-color;;
-  }
-}
+};
