--- a/src/Stylesheets/Header.scss
+++ b/src/Stylesheets/Header.scss
@@ -12,32 +12,33 @@
   box-shadow:0px 5px 41px 15px $shadow-color;
 
   .title {
-    font-size: 64px;
+    font-size: 45px;
     letter-spacing: 11%;
     color: $text-color;
     cursor: default
   };
 
   .logo {
-    height: 200px;
-    width: 200px;
+    height: 100px;
+    width: 100px;
     padding-left: 35px;
     padding-top: 10px;
     transition: box-shadow 0;
   };
   .menuButton {
     color: $text-color;
-    margin: 10px;
+    margin: 20px;
     padding: 20px;
-    font-size: 20px;
+    font-size: 14px;
     transition: box-shadow .5s;
     border-radius: 5%;
     text-decoration: none;
+    font-style: italic;
   };
   .menuButton:hover {
     box-shadow: 0px 10px 18px 3px $shadow-color;
   };
   .divider {
-    width: 20%;
+    width: 10%;
   }
 };
