--- a/src/Stylesheets/Variables.scss
+++ b/src/Stylesheets/Variables.scss
@@ -1,5 +1,7 @@
 @import "@fontsource/bodoni-moda-sc";
 
+$headfont: "bodoni-moda-sc";
+$bodyfont: "bodoni-moda";
 $text-color: #3C4933;
 $background-color: #D5DFCD;
 $shadow-color: #828173;
