--- a/src/Stylesheets/Main.scss
+++ b/src/Stylesheets/Main.scss
@@ -1,5 +1,6 @@
 @import "Variables.scss";
 
-body {
-    background-color: $background-color;
-  }
+// body {
+//     background-color: $background-color;
+//     padding-top: 75px;
+//   }
